WAL-50 css fixes; safari version check; scrollbar fix

--- a/front/src/app/components/common/icon/index.less
+++ b/front/src/app/components/common/icon/index.less
@@ -7,6 +7,7 @@
   text-decoration: none;
   position: relative;
   vertical-align: baseline;
+  -webkit-appearance: none !important;
 
   a&:focus,
   a&:visited,
